--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,7 @@
 html,
 body {
   @apply h-screen w-screen;
-  @apply m-0 p-0 border-0;
+  @apply m-0 p-0 border-0 overflow-x-hidden;
   @apply bg-slate-900 text-violet-400;
 }
 
